Modifications for Klarna LPM support
Added form field and hardcoded line-items to support demo of Klarna LPM

--- a/app/templates/billing-address-form.html
+++ b/app/templates/billing-address-form.html
@@ -43,6 +43,9 @@
                     </div><div class="addressInput" id="country">
                         <label class="addressLabel" for="country">Country</label>
                         <input type="text" class="form-control" placeholder="Country" name="country" value="United States" readonly>
+                    </div><div class="addressInput" id="email">
+                        <label class="addressLabel" for="email">E-mail</label>
+                        <input type="text" class="form-control" placeholder="you@example.com" name="email" value="you@example.com" readonly>
                     </div>
                 </div>
             </form>
