--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -17,16 +17,77 @@
         <li class="integration-list-item">
             <a class="integration-list-item-link" href="{{ url_for('cart', integration="card") }}">
                 <div class="title-container">
-                    <p class="integration-list-item-title">Component</p>
-                    <p class="integration-list-item-subtitle">Card</p>
+                    <p class="integration-list-item-title">Card</p>
                 </div>
             </a>
         </li>
         <li class="integration-list-item">
             <a class="integration-list-item-link" href="{{ url_for('cart', integration="ideal") }}">
                 <div class="title-container">
-                    <p class="integration-list-item-title">Component</p>
-                    <p class="integration-list-item-subtitle">iDEAL</p>
+                    <p class="integration-list-item-title">iDEAL</p>
+                </div>
+            </a>
+        </li>
+        <li class="integration-list-item">
+            <a class="integration-list-item-link" href="{{ url_for('cart', integration="klarna") }}">
+                <div class="title-container">
+                    <p class="integration-list-item-title">Klarna</p>
+                </div>
+            </a>
+        </li>
+        <li class="integration-list-item">
+            <a class="integration-list-item-link" href="{{ url_for('cart', integration="directEbanking") }}">
+                <div class="title-container">
+                    <p class="integration-list-item-title">Sofort</p>
+                </div>
+            </a>
+        </li>
+        <li class="integration-list-item">
+            <a class="integration-list-item-link" href="{{ url_for('cart', integration="alipay") }}">
+                <div class="title-container">
+                    <p class="integration-list-item-title">Alipay</p>
+                </div>
+            </a>
+        </li>
+        <li class="integration-list-item">
+            <a class="integration-list-item-link" href="{{ url_for('cart', integration="wechatpay") }}">
+                <div class="title-container">
+                    <p class="integration-list-item-title">WeChatPay</p>
+                </div>
+            </a>
+        </li>
+        <li class="integration-list-item">
+            <a class="integration-list-item-link" href="{{ url_for('cart', integration="boletobancario") }}">
+                <div class="title-container">
+                    <p class="integration-list-item-title">Boleto</p>
+                </div>
+            </a>
+        </li>
+        <li class="integration-list-item">
+            <a class="integration-list-item-link" href="{{ url_for('cart', integration="sepadirectdebit") }}">
+                <div class="title-container">
+                    <p class="integration-list-item-title">Sepa Direct Debit</p>
+                </div>
+            </a>
+        </li>
+        <li class="integration-list-item">
+            <a class="integration-list-item-link" href="{{ url_for('cart', integration="dotpay") }}">
+                <div class="title-container">
+                    <p class="integration-list-item-title">Dotpay</p>
+                </div>
+            </a>
+        </li>
+        <li class="integration-list-item">
+            <a class="integration-list-item-link" href="{{ url_for('cart', integration="giropay") }}">
+                <div class="title-container">
+                    <p class="integration-list-item-title">Giropay</p>
+                </div>
+            </a>
+        </li>
+        <li class="integration-list-item">
+            <a class="integration-list-item-link" href="{{ url_for('cart', integration="ach") }}">
+                <div class="title-container">
+                    <p class="integration-list-item-title">ACH</p>
                 </div>
             </a>
         </li>
