Removed app/static from tracking

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -50,7 +50,7 @@
             </a>
         </li>
         <li class="integration-list-item">
-            <a class="integration-list-item-link" href="{{ url_for('cart', integration="wechatpay") }}">
+            <a class="integration-list-item-link" href="{{ url_for('cart', integration="wechatpayWeb") }}">
                 <div class="title-container">
                     <p class="integration-list-item-title">WeChatPay</p>
                 </div>
