align css with other examples

--- a/app/templates/component.html
+++ b/app/templates/component.html
@@ -5,13 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.6.0/adyen.css">
 
-    <div class="checkout">
-        <div class="title">{{ method }} Checkout</div>
+    <div id="payment-page">
+        <div class="container">
+            <div class="checkout-component payment-container" style="width: 100%; max-width: 100%;">
 
-        <div class="payment-components-container">
-            <div class="checkout-component">
-
-                <div id="component">
+                <div id="component" class="payment">
                     <!-- Component will be rendered here -->
                 </div>
 
