--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -6,22 +6,22 @@
         <section class="cart">
             <h2>Cart</h2>
             <div class="order-summary">
-                <ul class="order-summary__list">
-                    <li class="order-summary__list__list-item">
+                <ul class="order-summary-list">
+                    <li class="order-summary-list-list-item">
                         <img src="{{ url_for('static', filename='img/sunglasses.svg') }}"
-                             class="order-summary__list__list-item__image"/>
-                        <p class="order-summary__list__list-item__title">Sunglasses</p>
-                        <p class="order-summary__list__list-item__price">€5.00</p>
+                             class="order-summary-list-list-item-image"/>
+                        <p class="order-summary-list-list-item-title">Sunglasses</p>
+                        <p class="order-summary-list-list-item-price">€5.00</p>
                     </li>
-                    <li class="order-summary__list__list-item">
+                    <li class="order-summary-list-list-item">
                         <img src="{{ url_for('static', filename='img/headphones.svg') }}"
-                             class="order-summary__list__list-item__image"/>
-                        <p class="order-summary__list__list-item__title">Headphones</p>
-                        <p class="order-summary__list__list-item__price">€5.00</p>
+                             class="order-summary-list-list-item-image"/>
+                        <p class="order-summary-list-list-item-title">Headphones</p>
+                        <p class="order-summary-list-list-item-price">€5.00</p>
                     </li>
                 </ul>
             </div>
-            <div class="cart__footer"><span class="cart__footer__label">Total:</span><span class="cart__footer__amount">€10.00</span>
+            <div class="cart-footer"><span class="cart-footer-label">Total:</span><span class="cart-footer-amount">€10.00</span>
                 <a href="{{ url_for('checkout', integration=method) }}">
                     <p class="button">Continue to checkout</p>
                 </a>
