--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-   <head>
-      <meta charset="utf-8">
-      <title>Fusion</title>
-      <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
-   </head>
-   <body>
-      <header id="header">
-         <a href="{{ url_for('home') }}">
-         <img src="{{ url_for('static', filename='img/mystore-logo.svg') }}" alt="MyStore logo">
-         </a>
-      </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}" />
+
+    <title>Checkout Demo</title>
+  </head>
+  <body>
+    <header id="header">
+      <a href="{{ url_for('home') }}">
+        <img
+          src="{{ url_for('static', filename='img/mystore-logo.svg') }}"
+          alt="MyStore logo"
+        />
+      </a>
+    </header>
 
     <div class="container">
-      {% block content %}
-      {% endblock %}
+      {% block content %} {% endblock %}
     </div>
-
   </body>
 </html>
