improve api naming scheme

--- a/app/templates/fetch-payment-data.html
+++ b/app/templates/fetch-payment-data.html
@@ -16,7 +16,7 @@
             return values;
         };
 
-        fetch(`/handleShopperRedirect`, {
+        fetch(`/api/handleShopperRedirect`, {
             method: 'POST',
             headers: {
                 Accept: 'application/json, text/plain, */*',
