add bootstrap css

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <main class="whole-preview">
+    <main class="preview-page">
         <section class="cart">
             <h2>Cart</h2>
             <div class="order-summary">
