--- a/app/templates/component.html
+++ b/app/templates/component.html
@@ -3,7 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.6.0/adyen.css">
+    <link 
+        rel="stylesheet"
+        href="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.6.0/adyen.css"
+        integrity="sha384-NzXIrom1g7+1OMBJWAyapJ4yYXLFHdsE1ZxOVstMQVwURFl3RXldhYENYkBaBjL8"
+        crossorigin="anonymous"
+    >
 
     <div id="payment-page">
         <div class="container">
@@ -18,7 +23,9 @@
     </div>
 
 
-    <script src="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.6.0/adyen.js"></script>
+    <script src="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.6.0/adyen.js"
+     integrity="sha384-Ae3bpVd/uyREJxla2lRiuEXoYQA/WReCh/h1+sek9TFeq6iwAVBu9tDyMJNzpZHc"
+     crossorigin="anonymous"></script>
 
     <script id="payment-methods" type="application/json">{{ payment_methods|tojson }}</script>
     <script id="origin-key" type="application/json">{{ origin_key|tojson }}</script>
