--- a/app/templates/component.html
+++ b/app/templates/component.html
@@ -3,12 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link 
-        rel="stylesheet"
-        href="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.6.0/adyen.css"
-        integrity="sha384-NzXIrom1g7+1OMBJWAyapJ4yYXLFHdsE1ZxOVstMQVwURFl3RXldhYENYkBaBjL8"
-        crossorigin="anonymous"
-    >
+    <link rel="stylesheet" href="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/3.9.4/adyen.css"
+          integrity="sha384-6qrXvoxlnBlrflZQ9g5Yf5oZapUSSXctPxacP9oRcEukbEO7lXisuSyMKG8pDX8V"
+          crossorigin="anonymous">
 
     <div id="payment-page">
         <div class="container">
@@ -23,9 +20,9 @@
     </div>
 
 
-    <script src="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.6.0/adyen.js"
-     integrity="sha384-Ae3bpVd/uyREJxla2lRiuEXoYQA/WReCh/h1+sek9TFeq6iwAVBu9tDyMJNzpZHc"
-     crossorigin="anonymous"></script>
+    <script src="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/3.9.4/adyen.js"
+            integrity="sha384-8Q8tz/+hf+UkS01nLrKLJgQLdaR1hRklqJQksCHh903UIfW+xMt275Lms4GZgVUi"
+            crossorigin="anonymous"></script>
 
     <script id="payment-methods" type="application/json">{{ payment_methods|tojson }}</script>
     <script id="origin-key" type="application/json">{{ origin_key|tojson }}</script>
