--- a/app/templates/component.html
+++ b/app/templates/component.html
@@ -3,12 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link 
-        rel="stylesheet"
-        href="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.6.0/adyen.css"
-        integrity="sha384-NzXIrom1g7+1OMBJWAyapJ4yYXLFHdsE1ZxOVstMQVwURFl3RXldhYENYkBaBjL8"
-        crossorigin="anonymous"
-    >
+    <link
+      rel="stylesheet"
+      href="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.10.1/adyen.css"
+      integrity="sha384-8ofgICZZ/k5cC5N7xegqFZOA73H9RQ7H13439JfAZW8Gj3qjuKL2isaTD3GMIhDE"
+      crossorigin="anonymous"
+    />
 
     <div id="payment-page">
         <div class="container">
@@ -23,12 +23,14 @@
     </div>
 
 
-    <script src="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.6.0/adyen.js"
-     integrity="sha384-Ae3bpVd/uyREJxla2lRiuEXoYQA/WReCh/h1+sek9TFeq6iwAVBu9tDyMJNzpZHc"
-     crossorigin="anonymous"></script>
+    <script
+      src="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.10.1/adyen.js"
+      integrity="sha384-wG2z9zSQo61EIvyXmiFCo+zB3y0ZB4hsrXVcANmpP8HLthjoQJQPBh7tZKJSV8jA"
+      crossorigin="anonymous"
+    ></script>
 
     <script id="payment-methods" type="application/json">{{ payment_methods|tojson }}</script>
-    <script id="origin-key" type="application/json">{{ origin_key|tojson }}</script>
+    <script id="client-key" type="application/json">{{ client_key|tojson }}</script>
     <script id="integration-type" type="application/json">{{ method|tojson }}</script>
 
     <script src="{{ url_for('static', filename='js/adyen_implementations.js') }}"></script>
