--- a/app/templates/component.html
+++ b/app/templates/component.html
@@ -3,8 +3,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/3.10.1/adyen.css"
-		  integrity="sha384-8ofgICZZ/k5cC5N7xegqFZOA73H9RQ7H13439JfAZW8Gj3qjuKL2isaTD3GMIhDE"
+	<link rel="stylesheet"
+		  href="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.13.0/adyen.css"
+		  integrity="sha384-AtxcD/Ax9ZRBLJ63s/bwCMrfe/mXWt4TF7F+Vltoxo0WgAwWjVNDsfyMAgY+9nBi"
 		  crossorigin="anonymous">
 
 	<div id="payment-page">
@@ -20,12 +21,12 @@
 	</div>
 
 
-	<script src="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/3.10.1/adyen.js"
-			integrity="sha384-wG2z9zSQo61EIvyXmiFCo+zB3y0ZB4hsrXVcANmpP8HLthjoQJQPBh7tZKJSV8jA"
+	<script src="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.13.0/adyen.js"
+			integrity="sha384-cMH19I9HPj31iL3b/lcBcpsqbieCGSLyNef+RzjS7g3h5DhP2BI6j68/ogKSQCAh"
 			crossorigin="anonymous"></script>
 
-	<script id="payment-methods" type="application/json">{{ payment_methods|tojson }}</script>
-	<script id="origin-key" type="application/json">{{ origin_key|tojson }}</script>
+	<script id="payment-methods" type="application/json">{{ payment_methods|safe }}</script>
+	<script id="client-key" type="application/json">{{ client_key|tojson }}</script>
 	<script id="integration-type" type="application/json">{{ method|tojson }}</script>
 
 	<script src="{{ url_for('static', filename='js/adyen_implementations.js') }}"></script>
