Switched to newest adyen-implementaiton.js file -> Resulted in moving payment filtering to frontend for readability and renaming static content Also updated Adyen JS SDK to 3.18.2

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -8,13 +8,13 @@
             <div class="order-summary">
                 <ul class="order-summary-list">
                     <li class="order-summary-list-list-item">
-                        <img src="{{ url_for('static', filename='img/sunglasses.svg') }}"
+                        <img src="{{ url_for('static', filename='img/sunglasses.png') }}"
                              class="order-summary-list-list-item-image"/>
                         <p class="order-summary-list-list-item-title">Sunglasses</p>
                         <p class="order-summary-list-list-item-price">€5.00</p>
                     </li>
                     <li class="order-summary-list-list-item">
-                        <img src="{{ url_for('static', filename='img/headphones.svg') }}"
+                        <img src="{{ url_for('static', filename='img/headphones.png') }}"
                              class="order-summary-list-list-item-image"/>
                         <p class="order-summary-list-list-item-title">Headphones</p>
                         <p class="order-summary-list-list-item-price">€5.00</p>
