--- a/app/templates/checkout-failed.html
+++ b/app/templates/checkout-failed.html
@@ -5,7 +5,7 @@
 
     <div class="status-container">
         <div class="status">
-            <img src="{{ url_for('static', filename='img/failure.svg') }}" class="status-image"/>
+            <img src="{{ url_for('static', filename='img/failed.svg') }}" class="status-image"/>
             <p class="status-message">Your order has failed. Please try again.</p>
             <a class="button" href="/">Try Again</a>
         </div>
