--- a/app/templates/component.html
+++ b/app/templates/component.html
@@ -4,8 +4,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet"
-		  href="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.17.0/adyen.css"
-		  integrity="sha384-gbQyzqV1xX+snFEMrubEm0IpmYSufBjUnHzTaJZ+dcWCyxl0j94IZhnfC2gbxgeu"
+		  href="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.18.2/adyen.css"
+		  integrity="sha384-5K4T5NNVv7ZBvNypROEUSjvOL45HszUg/eYfYadY82UF4b+hc+TPQ4SsfTGXufJp"
 		  crossorigin="anonymous">
 
 	<div id="payment-page">
@@ -21,13 +21,13 @@
 	</div>
 
 
-	<script src="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.17.0/adyen.js"
-			integrity="sha384-G9jkTAyCOIVdksXbtrNgdur2DyRi85ujYLXbqe5AvvH23rN21d7xiU7cRIqvsEaH"
+	<script src="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/3.18.2/adyen.js"
+			integrity="sha384-/5SuEQKK7mLmDWB+eUPAur02KPkNC7pwAqyPez1TuNjeqRjsNDJdAnrbSxrzua2P"
 			crossorigin="anonymous"></script>
 
 	<script id="payment-methods" type="application/json">{{ payment_methods|safe }}</script>
 	<script id="client-key" type="application/json">{{ client_key|tojson }}</script>
 	<script id="integration-type" type="application/json">{{ method|tojson }}</script>
 
-	<script src="{{ url_for('static', filename='js/adyen_implementations.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/adyen-implementation.js') }}"></script>
 {% endblock %}
