--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -98,6 +98,13 @@
                     </div>
                 </a>
             </li>
+			<li class="integration-list-item">
+                <a class="integration-list-item-link" href="{{ url_for('cart', integration="applepay") }}">
+                    <div class="title-container">
+                        <p class="integration-list-item-title">ApplePauy</p>
+                    </div>
+                </a>
+            </li>
         </ul>
     </div>
 {% endblock %}
