Cleaned up CSS, moved paymentMethods call to client side, and removed ApplePay which was added for testing purposes

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 
-    <main class="preview-page">
+    <main>
         <section class="cart">
             <h2>Cart</h2>
-            <div class="order-summary">
-                <ul class="order-summary-list">
-                    <li class="order-summary-list-list-item">
+            <div>
+                <ul>
+                    <li class="order-summary-list-list-item first-item">
                         <img src="{{ url_for('static', filename='img/sunglasses.png') }}"
                              class="order-summary-list-list-item-image"/>
                         <p class="order-summary-list-list-item-title">Sunglasses</p>
