Integration work complete. Requires update to Python API lib to use API v greaterthan or equal to 66. Currently 4.0.0 uses 64

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -91,6 +91,13 @@
                     </div>
                 </a>
             </li>
+			<li class="integration-list-item">
+                <a class="integration-list-item-link" href="{{ url_for('cart', integration="directdebit_GB") }}">
+                    <div class="title-container">
+                        <p class="integration-list-item-title">BACS</p>
+                    </div>
+                </a>
+            </li>
             <li class="integration-list-item">
                 <a class="integration-list-item-link" href="{{ url_for('cart', integration="paypal") }}">
                     <div class="title-container">
