Remove platform env variable, hardcoding 'test'

--- a/app/templates/component.html
+++ b/app/templates/component.html
@@ -1,15 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
 
-var platform = JSON.parse('{{ platform | tojson | safe}}');
-
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://checkoutshopper-{{ platform }}.adyen.com/checkoutshopper/sdk/5.0.0/adyen.css"
-          integrity="sha384-0IvbHDeulbhdg1tMDeFeGlmjiYoVT6YsbfAMKFU2lFd6YKUVk0Hgivcmva3j6mkK"
-          crossorigin="anonymous">
 
+	<!-- Adyen CSS from TEST environment (change to live for production)-->
+	<link rel="stylesheet" href="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/5.3.0/adyen.css"
+		  integrity="sha384-47lm6XSs4AdvQN9BdRTZykpp82IALHlxMtM5p378Nsg3O3nGoBB86N0d7GXgjrA3"
+		  crossorigin="anonymous" />
 
 	<div id="payment-page">
 		<div class="container">
@@ -23,14 +22,13 @@ var platform = JSON.parse('{{ platform | tojson | safe}}');
 		</div>
 	</div>
 
-
-    <script src="https://checkoutshopper-{{ platform }}.adyen.com/checkoutshopper/sdk/5.0.0/adyen.js"
-            integrity="sha384-kcKKvS6qZbXycrUw31OJ2/2Hz8A8FTsV9anjvpyQc/IWR1SmkFUw7w7F/t5S3qtA"
-            crossorigin="anonymous"></script>
+	<!-- Adyen JS from TEST environment (change to live for production)-->
+	<script src="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/5.3.0/adyen.js"
+			integrity="sha384-JvmVzbCK60Gcpx1h3mM13vJQGFfEOD6ZhuXN76Q/Wcz9KPVadwxK10zGHd1SMWn9"
+			crossorigin="anonymous"></script>
 
 	<script id="client-key" type="application/json">{{ client_key|tojson }}</script>
 	<script id="integration-type" type="application/json">{{ method|tojson }}</script>
-	<script id="platform" type="application/json">{{ platform|tojson }}</script>
 
 	<script src="{{ url_for('static', filename='js/adyen-implementation.js') }}"></script>
 {% endblock %}
