Add sessions call (#9)
* Add sessions call

* Add /api/sessions endpoint

* Remove functionality no longer used

* Update link to adyen.css

* Remove functionality no longer used

* Update version of Adyen dependency

* Remove endpoints no longer used

* Invoke /api/sessions endpoint, remove unused code

* Update min version required (Adyen Python dependency)

* Minor improvement

* Use AdyenClient via AdyenPayment to be consistent with README and Adyen Docs

* Adding platform configuration variable

* Handle redirect URL

* Refactor to use Adyen Checkout object to start and finalise the checkout

* Implement Webhook for payment notifications

* Remove handler no longer used

* Remove code no longer used

* Remove platform env variable, hardcoding 'test'

* Hardcoding 'test', introducing uuid to generate payment ref

* Remove console log

--- a/app/templates/component.html
+++ b/app/templates/component.html
@@ -1,12 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
+
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet"
-        href="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/4.1.0/adyen.css"
-        integrity="sha384-+CPzBNZVkBXu4uXDECnVuVQ24Kl8vWrR61UzuuuUj5IBEP//BQ0G0KDNfz2iPcvJ"
-        crossorigin="anonymous">
+
+	<!-- Adyen CSS from TEST environment (change to live for production)-->
+	<link rel="stylesheet" href="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/5.3.0/adyen.css"
+		  integrity="sha384-47lm6XSs4AdvQN9BdRTZykpp82IALHlxMtM5p378Nsg3O3nGoBB86N0d7GXgjrA3"
+		  crossorigin="anonymous" />
 
 	<div id="payment-page">
 		<div class="container">
@@ -20,10 +22,10 @@
 		</div>
 	</div>
 
-
-    <script src="https://checkoutshopper-live.adyen.com/checkoutshopper/sdk/4.1.0/adyen.js"
-        integrity="sha384-3tEepwhhMcyxgIbL3HBe3I59BpSMNyKoNrbKWARYH1tJ7K7K6NdTDqOltKlwiVsH"
-        crossorigin="anonymous"></script>
+	<!-- Adyen JS from TEST environment (change to live for production)-->
+	<script src="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/5.3.0/adyen.js"
+			integrity="sha384-JvmVzbCK60Gcpx1h3mM13vJQGFfEOD6ZhuXN76Q/Wcz9KPVadwxK10zGHd1SMWn9"
+			crossorigin="anonymous"></script>
 
 	<script id="client-key" type="application/json">{{ client_key|tojson }}</script>
 	<script id="integration-type" type="application/json">{{ method|tojson }}</script>
