Upgrade Adyen web 5.16.0

--- a/app/templates/component.html
+++ b/app/templates/component.html
@@ -6,8 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 	<!-- Adyen CSS from TEST environment (change to live for production)-->
-	<link rel="stylesheet" href="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/5.13.1/adyen.css"
-		  integrity="sha384-r7Ye68dqFoSnkRA9wgyLKiVNga2c+G98mIVq4FT+Rmi6ba0EH2/YI3ZGYvpZ3zIM"
+	<link rel="stylesheet"
+		  href="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/5.16.0/adyen.css"
+		  integrity="sha384-zy4t7axSdzHBMGqwJAynlv3eFVNiWw68LMf7vgKXxl2zZ6A8FlpucOoA/J//GBaQ"
 		  crossorigin="anonymous">
 
 	<div id="payment-page">
@@ -23,9 +24,9 @@
 	</div>
 
 	<!-- Adyen JS from TEST environment (change to live for production)-->
-	<script src="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/5.13.1/adyen.js"
-			integrity="sha384-M3DQX1ovYxJTUt7n1uN1IyRvhCtILxV+AwB5hHntGwmiYW2uRr4lmJnj0ToaqyFy"
-			crossorigin="anonymous"></script>
+	<script src="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/5.16.0/adyen.js"
+     		integrity="sha384-eOf0O1MTPGB1DQpr+Yha0MrmJruQb5S82+tuyo4sLiyfo1hgbf6W+fNfLjjU7Sks"
+     		crossorigin="anonymous"></script>
 
 	<script id="client-key" type="application/json">{{ client_key|tojson }}</script>
 	<script id="integration-type" type="application/json">{{ method|tojson }}</script>
