--- a/app/templates/component.html
+++ b/app/templates/component.html
@@ -7,13 +7,13 @@
 
 	<!-- Adyen CSS from TEST environment (change to live for production)-->
 	<link rel="stylesheet"
-		  href="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/5.16.0/adyen.css"
-		  integrity="sha384-zy4t7axSdzHBMGqwJAynlv3eFVNiWw68LMf7vgKXxl2zZ6A8FlpucOoA/J//GBaQ"
+		  href="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/5.23.1/adyen.css"
+		  integrity="sha384-y6jvSkH/EJ+EmVfUABibJST5Df3+PXlPuQveX3NigzwJmiNofEBsUXxbxoaEllaI"
 		  crossorigin="anonymous">
 
 	<div id="payment-page">
 		<div class="container">
-			<div class="checkout-component-container">
+			<div class="payment-container">
 
 				<div id="component" class="payment">
 					<!-- Component will be rendered here -->
@@ -24,9 +24,9 @@
 	</div>
 
 	<!-- Adyen JS from TEST environment (change to live for production)-->
-	<script src="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/5.16.0/adyen.js"
-     		integrity="sha384-eOf0O1MTPGB1DQpr+Yha0MrmJruQb5S82+tuyo4sLiyfo1hgbf6W+fNfLjjU7Sks"
-     		crossorigin="anonymous"></script>
+	<script src="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/5.23.1/adyen.js"
+			integrity="sha384-O0Q35c47I1ojd1zrD78yWAs+r5gytAjBC/sxwZqgQW5z9hDbAFM49z8SViprrDwm"
+			crossorigin="anonymous"></script>
 
 	<script id="client-key" type="application/json">{{ client_key|tojson }}</script>
 	<script id="integration-type" type="application/json">{{ method|tojson }}</script>
