--- a/app/static/css/application.css
+++ b/app/static/css/application.css
@@ -282,11 +282,11 @@ a:hover {
 	margin-top: 100px;
 	display: flex;
 	flex-direction: row;
-	align-items: center;
-
 	justify-content: space-between;
 	width: 100%;
 	max-width: 1110px;
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 @media screen and (max-width: 1076px) {
@@ -308,16 +308,16 @@ a:hover {
   border-radius: 12px;
   padding-top: 18px;
   padding-bottom: 18px;
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 /* Adyen Components */
 .payment {
-	width: 100%;
-	padding: 0;
-	display: flex;
-	justify-content: center;
+  width: 100%;
+  padding-top: 0px !important;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 /* end Payments page */
