--- a/app/templates/component.html
+++ b/app/templates/component.html
@@ -5,11 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-	<!-- Adyen CSS from TEST environment (change to live for production)-->
+
+	<!-- Adyen css from TEST environment (change to live for production)-->
 	<link rel="stylesheet"
-		  href="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/5.23.1/adyen.css"
-		  integrity="sha384-y6jvSkH/EJ+EmVfUABibJST5Df3+PXlPuQveX3NigzwJmiNofEBsUXxbxoaEllaI"
-		  crossorigin="anonymous">
+		 href="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/5.40.0/adyen.css"
+		 integrity="sha384-BRZCzbS8n6hZVj8BESE6thGk0zSkUZfUWxL/vhocKu12k3NZ7xpNsIK39O2aWuni"
+		 crossorigin="anonymous">
 
 	<div id="payment-page">
 		<div class="container">
@@ -24,9 +25,9 @@
 	</div>
 
 	<!-- Adyen JS from TEST environment (change to live for production)-->
-	<script src="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/5.23.1/adyen.js"
-			integrity="sha384-O0Q35c47I1ojd1zrD78yWAs+r5gytAjBC/sxwZqgQW5z9hDbAFM49z8SViprrDwm"
-			crossorigin="anonymous"></script>
+	<script src="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/5.40.0/adyen.js"
+		 integrity="sha384-ds1t0hgFCe636DXFRL6ciadL2Wb4Yihh27R4JO7d9CF7sFY3NJE4aPCK0EpzaYXD"
+		 crossorigin="anonymous"></script>
 
 	<script id="client-key" type="application/json">{{ client_key|tojson }}</script>
 	<script id="integration-type" type="application/json">{{ method|tojson }}</script>
