Update navigation to new pages

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -36,86 +36,23 @@
                 </a>
             </li>
             <li class="integration-list-item">
-                <a class="integration-list-item-link" href="{{ url_for('cart', integration="klarna") }}">
+                <a class="integration-list-item-link" href="{{ url_for('cart', integration="googlepay") }}">
                     <div class="title-container">
-                        <p class="integration-list-item-title">Klarna</p>
+                        <p class="integration-list-item-title">Google Pay</p>
                     </div>
                 </a>
             </li>
             <li class="integration-list-item">
-                <a class="integration-list-item-link" href="{{ url_for('cart', integration="directEbanking") }}">
-                    <div class="title-container">
-                        <p class="integration-list-item-title">Sofort</p>
-                    </div>
-                </a>
-            </li>
-            <li class="integration-list-item">
-                <a class="integration-list-item-link" href="{{ url_for('cart', integration="alipay") }}">
-                    <div class="title-container">
-                        <p class="integration-list-item-title">Alipay</p>
-                    </div>
-                </a>
-            </li>
-            <li class="integration-list-item">
-                <a class="integration-list-item-link" href="{{ url_for('cart', integration="boletobancario") }}">
-                    <div class="title-container">
-                        <p class="integration-list-item-title">Boleto</p>
-                    </div>
-                </a>
-            </li>
-            <li class="integration-list-item">
-                <a class="integration-list-item-link" href="{{ url_for('cart', integration="sepadirectdebit") }}">
+                <a class="integration-list-item-link" href="{{ url_for('cart', integration="sepa") }}">
                     <div class="title-container">
                         <p class="integration-list-item-title">Sepa Direct Debit</p>
                     </div>
                 </a>
             </li>
             <li class="integration-list-item">
-                <a class="integration-list-item-link" href="{{ url_for('cart', integration="dotpay") }}">
-                    <div class="title-container">
-                        <p class="integration-list-item-title">Dotpay</p>
-                    </div>
-                </a>
-            </li>
-            <li class="integration-list-item">
-                <a class="integration-list-item-link" href="{{ url_for('cart', integration="giropay") }}">
-                    <div class="title-container">
-                        <p class="integration-list-item-title">Giropay</p>
-                    </div>
-                </a>
-            </li>
-            <li class="integration-list-item">
-                <a class="integration-list-item-link" href="{{ url_for('cart', integration="ach") }}">
-                    <div class="title-container">
-                        <p class="integration-list-item-title">ACH</p>
-                    </div>
-                </a>
-            </li>
-            <li class="integration-list-item">
-                <a class="integration-list-item-link" href="{{ url_for('cart', integration="paypal") }}">
-                    <div class="title-container">
-                        <p class="integration-list-item-title">PayPal</p>
-                    </div>
-                </a>
-            </li>
-            <li class="integration-list-item">
-                <a class="integration-list-item-link" href="{{ url_for('cart', integration="klarna_paynow") }}">
-                    <div class="title-container">
-                        <p class="integration-list-item-title">Klarna - Pay now</p>
-                    </div>
-                </a>
-            </li>
-            <li class="integration-list-item">
                 <a class="integration-list-item-link" href="{{ url_for('cart', integration="klarna") }}">
                     <div class="title-container">
-                    <p class="integration-list-item-title">Klarna - Pay later</p>
-                    </div>
-                </a>
-            </li>
-            <li class="integration-list-item">
-                <a class="integration-list-item-link" href="{{ url_for('cart', integration="klarna_account") }}">
-                    <div class="title-container">
-                    <p class="integration-list-item-title">Klarna - Slice it</p>
+                        <p class="integration-list-item-title">Klarna - Pay now</p>
                     </div>
                 </a>
             </li>
