Add Drop-in v6 (#62)
* Add dropin v6

* Remove previous implementation

* Use server-side redirect

* Update navigation to new pages

* Add handleShopperRedirect with paymentDetails call

* Dependabot ignore _archive/v5

* Run E2E with both v5 and v6

* Keep dropin v5 implementation

* Correct E2E test workflow for v6

* Correct docker build argument

--- a/_archive/v5/app/templates/cart.html
+++ b/_archive/v5/app/templates/cart.html
@@ -22,7 +22,7 @@
                 </ul>
             </div>
             <div class="cart-footer"><span class="cart-footer-label">Total:</span><span class="cart-footer-amount">€100.00</span>
-                <a href="/checkout/{{ method }}">
+                <a href="{{ url_for('checkout', integration=method) }}">
                     <p class="button">Continue to checkout</p>
                 </a>
             </div>
